--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         align-items: center;
       "
     >
-      <input type="text" class="strartId" />
+      <input type="text" class="startId" />
       <button class="startButton">начать определение последнего ID</button>
       <div class="tryCount"></div>
       <div class="ok"></div>
